--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,31 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - 8000:8000
     volumes:
       - .:/var/www/html
-    depends_on:
-      - db
     environment:
+      - APP_ENV=local
+      - APP_DEBUG=true
+      - APP_KEY=your_app_key
       - DB_CONNECTION=mysql
       - DB_HOST=db
       - DB_PORT=3306
-      - DB_DATABASE=laravel
-      - DB_USERNAME=root
-      - DB_PASSWORD=password
+      - DB_DATABASE=your_database_name
+      - DB_USERNAME=your_database_username
+      - DB_PASSWORD=your_database_password
+    depends_on:
+      - db
   db:
     image: mysql:5.7
     ports:
-      - "3306:3306"
+      - 3306:3306
+    volumes:
+      - db_data:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: root
-      MYSQL_PASSWORD: password
-      MYSQL_ROOT_PASSWORD: password
+      - MYSQL_DATABASE=your_database_name
+      - MYSQL_USER=your_database_username
+      - MYSQL_PASSWORD=your_database_password
+      - MYSQL_ROOT_PASSWORD=your_root_password
+volumes:
+  db_data:
